[package]
name = "yaats-tracker"
version = "0.1.0"
authors = ["Jonas <me@jbrn.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "3.0.0-alpha.1"
actix-rt = "1.0.0"
actix-http = "2.0.0-alpha.2"

serde = "1.0.105"
serde_bencode = "0.2.1"

futures = "0.3.4"

redis = "0.15.1"
log = "0.4.8"
async-log = "2.0.0"
config = "0.10.1"

[profile.release]
lto = true
opt-level = 3