[package]
name = "yaats-tracker"
version = "0.1.0"
authors = ["Jonas <me@jbrn.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
actix-http = "^1.0"
actix-redis = "^0.8"

serde = "^1.0"
serde_bencode = "^0.2"

futures = "^0.3"
num_cpus = "^1.12"
redis = "^0.15"
log = "^0.4"
async-log = "^2.0"
config = "^0.10"

[profile.release]
lto = true
opt-level = 3