[package]
name = "yaats-tracker"
version = "0.1.0"
authors = ["Jonas <me@jbrn.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
actix = "0.9"
actix-web = "^2.0"
actix-rt = "^1.0"
actix-http = "^1.0"
actix-redis = "^0.8"

serde = "^1.0"
serde_bencode = "^0.2"
serde_urlencoded = "0.6"

futures = "^0.3"
num_cpus = "^1.12"
redis = "^0.15"
log = "^0.4"
pretty_env_logger = "0.4"
config = "^0.10"
thiserror = "1.0"
async-trait = "0.1"

[profile.release]
lto = true
opt-level = 3